--- a/holidaymaker/src/main/resources/static/css/default.css
+++ b/holidaymaker/src/main/resources/static/css/default.css
@@ -234,7 +234,6 @@ nav li {
     padding: 2px 8px;
     background: #fff;
     display: inline-block;
-    border: 1px solid #ddd;
     border-radius: 3px;
     margin: 3px;
 }
@@ -244,17 +243,29 @@ nav li {
     cursor: pointer;
 }
 
+.booked-rooms > div {
+    border: 1px solid #ddd;
+}
+
+.booked-rooms > div:not(:last-child) {
+    margin-bottom: 4px;
+}
+
+.room-datetime {
+    border-top:1px solid #ddd;
+}
+
 .date-from, .date-to {
     padding: 3px 10px;
     display: inline-block;
-    border: 1px solid #ddd;
+    /*border: 1px solid #ddd;*/
     border-radius: 3px;
-    background: #fff;
+    /*background: #fff;*/
 }
 
 .date-from::before,
 .date-to::before {
-    color: #0c59d0;
+    color: #5674a2;
     font-weight: bold;
 }
 
@@ -342,6 +353,52 @@ a.hotel {
 .room.isBooked {
     background: #e1e1e1;
     position: relative;
+}
+
+.hotel-room-preview {
+    width:60%;
+}
+
+.add-room {
+    font-size: 25px;
+    color: #0980c8;
+}
+
+.create-booking-contrainer,
+.filter-form-container {
+    width: 50%;
+}
+
+.selected-room {
+    padding: 5px;
+    background: #f9f9f9;
+    margin: 5px;
+    border-radius: 3px;
+    border: 3px solid #1d83f0;
+    display: none;
+}
+
+.selected-room-extras input {
+    font-size: 1em;
+    padding: 7px 6px;
+    border: none;
+}
+
+.selected-room-info {
+    background: #eee;
+    padding: 5px;
+    font-size: 1.3em;
+}
+
+.selected-room-info span:nth-child(2) {
+    background: #0a72ce;
+    padding: 4px;
+    border-radius: 3px;
+    color: #fff;
+}
+
+.add-room .fa-minus {
+    color: red;
 }
 
 .flex,
