remove specific user booking

--- a/holidaymaker/src/main/resources/static/css/default.css
+++ b/holidaymaker/src/main/resources/static/css/default.css
@@ -423,3 +423,7 @@ a.hotel {
 
 .flex-row    { flex-direction: column; }
 .flex-column { flex-direction: row; }
+
+.hidden {
+    display: none !important;
+}
